# dini

./: .gitignore  CMakeLists.txt  README.md  diniConfig.cmake.in
benchmarks/: CMakeLists.txt  change_set_benchmark.cpp  query_benchmark.cpp
cmake/: winrc.cmake
include/dini/: change.h  diniglobal.h  engine.h  errors.h  event.h  handles.h  query.h  schema.h  transaction.h  types.h  value.h  view.h
include/dini/support/: shareddata.h
src/: change.cpp  change_log.cpp  change_p.h  engine.cpp  engine_p.h  errors.cpp  event.cpp  event_p.h  handles.cpp  handles_p.h  query.cpp  query_p.h  schema.cpp  schema_p.h  value.cpp  value_p.h  view.cpp  view_p.h
src/support/: runtime_index.cpp  runtime_index.h
tests/: CMakeLists.txt  document_engine_computed_column_test.cpp  document_engine_constraint_test.cpp  document_engine_event_test.cpp  document_engine_list_test.cpp  document_engine_log_snapshot_test.cpp  document_engine_pending_source_hook_test.cpp  document_engine_query_test.cpp  document_engine_smoke_test.cpp  document_engine_special_index_test.cpp  document_engine_transaction_test.cpp  document_engine_undo_redo_test.cpp  document_engine_unique_test.cpp  document_engine_volatile_test.cpp  shared_data_test.cpp
